--- a/configs/traffic_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_roi28.yaml
+++ b/configs/traffic_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_roi28.yaml
@@ -11,7 +11,7 @@ SOLVER:
   BASE_LR: 0.001
   GAMMA: 0.1
   MAX_ITER: 180000
-  STEPS: [0, 50000, 80000, 110000, 140000]
+  STEPS: [0, 80000, 120000]
 RPN:
   FOCAL_LOSS: False
 FPN:
@@ -30,8 +30,8 @@ FAST_RCNN:
   ROI_XFORM_SAMPLING_RATIO: 2
   MLP_HEAD_DIM: 1024
 TRAIN:
-  WEIGHTS: trained_models/e2e_faster_rcnn_X-101-64x4d-FPN_roi_28_fc_1024/train/traffic_train:traffic_val/generalized_rcnn/model_iter59999.pkl
-  DATASETS: ('traffic_train', 'traffic_val')
+  WEIGHTS: roi28_new.pkl
+  DATASETS: ('traffic_train', 'traffic_val', 'traffic_test')
   SCALES: (400,500, 600, 700, 800)
   MAX_SIZE: 1333
   IMS_PER_BATCH: 1
@@ -43,13 +43,15 @@ TEST:
   NMS: 0.3
   RPN_PRE_NMS_TOP_N: 1000  # Per FPN level
   RPN_POST_NMS_TOP_N: 1000
+  SOFT_NMS:
+    ENABLED: True
    # -- Test time augmentation example -- #
   BBOX_AUG:
     ENABLED: True
     SCORE_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     COORD_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     H_FLIP: True
-    SCALES: (400, 500, 600, 700, 800)
+    SCALES: (500, 600, 700, 800)
     MAX_SIZE: 3000
     SCALE_H_FLIP: True
     SCALE_SIZE_DEP: False
