--- a/configs/traffic_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_roi28.yaml
+++ b/configs/traffic_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_roi28.yaml
@@ -3,7 +3,7 @@ MODEL:
   CONV_BODY: FPN.add_fpn_ResNet101_conv5_body
   NUM_CLASSES: 2
   FASTER_RCNN: True
-NUM_GPUS: 1
+NUM_GPUS: 2
 SOLVER:
   WEIGHT_DECAY: 0.0001
   LR_POLICY: steps_with_decay
@@ -31,9 +31,9 @@ FAST_RCNN:
   MLP_HEAD_DIM: 1024
 TRAIN:
   WEIGHTS: roi28_new.pkl
-  DATASETS: ('traffic_train', 'traffic_val', 'traffic_test')
-  SCALES: (400,500, 600, 700, 800)
-  MAX_SIZE: 1333
+  DATASETS: ('traffic_train', 'traffic_val', 'traffic_test', 'traffic_test_360k')
+  SCALES: (400,500, 600, 700)
+  MAX_SIZE: 2333
   IMS_PER_BATCH: 1
   BATCH_SIZE_PER_IM: 256
   RPN_PRE_NMS_TOP_N: 2000  # Per FPN level
@@ -43,15 +43,14 @@ TEST:
   NMS: 0.3
   RPN_PRE_NMS_TOP_N: 1000  # Per FPN level
   RPN_POST_NMS_TOP_N: 1000
-  SOFT_NMS:
-    ENABLED: True
+
    # -- Test time augmentation example -- #
   BBOX_AUG:
     ENABLED: True
     SCORE_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     COORD_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     H_FLIP: True
-    SCALES: (500, 600, 700, 800)
+    SCALES: ( 500,600, 700, 800)
     MAX_SIZE: 3000
     SCALE_H_FLIP: True
     SCALE_SIZE_DEP: False
