--- a/configs/cloth_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN.yaml
+++ b/configs/cloth_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN.yaml
@@ -40,10 +40,10 @@ TRAIN:
   RPN_PRE_NMS_TOP_N: 2000  # Per FPN level
   DATASET_CACHE_PATH: 'detectron/datasets/data/cloth/cache/'
 TEST:
-  DATASETS: ('traffic_val',)
+  DATASETS: ('cloth_train',)
   NMS: 0.3
   RPN_PRE_NMS_TOP_N: 1000  # Per FPN level
-  RPN_POST_NMS_TOP_N: 1000
+  RPN_POST_NMS_TOP_N: 100
 
    # -- Test time augmentation example -- #
   BBOX_AUG:
@@ -51,8 +51,10 @@ TEST:
     SCORE_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     COORD_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     H_FLIP: True
-    SCALES: ( 500,600, 700, 800)
+    SCALES: ( 800, 1000)
     MAX_SIZE: 3000
+
+
     SCALE_H_FLIP: True
     SCALE_SIZE_DEP: False
     AREA_TH_LO: 50   # 50^2
