--- a/configs/hanzi_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_2x.yaml
+++ b/configs/hanzi_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN_2x.yaml
@@ -16,6 +16,7 @@ FPN:
   FPN_ON: True
   MULTILEVEL_ROIS: True
   MULTILEVEL_RPN: True
+  RPN_ASPECT_RATIOS: (1.,)
 RESNETS:
   STRIDE_1X1: False  # default True for MSRA; False for C2 or Torch models
   TRANS_FUNC: bottleneck_transformation
@@ -26,6 +27,7 @@ FAST_RCNN:
   ROI_XFORM_METHOD: RoIAlign
 TRAIN:
   # md5sum of weights pkl file: aa14062280226e48f569ef1c7212e7c7
+  # WEIGHTS: trained_models/hanzi/one_word/train/hanzi_train/generalized_rcnn/model_iter99999.pkl
   WEIGHTS: imagenet_models/X-101-64x4d.pkl
   DATASETS: ('hanzi_train', )
   DATASET_CACHE_PATH: 'detectron/datasets/data/'
@@ -36,21 +38,21 @@ TRAIN:
   BATCH_SIZE_PER_IM: 512
   RPN_PRE_NMS_TOP_N: 2000  # Per FPN level
 TEST:
-  DATASETS: ('steel_train',)
-  NMS: 0.3
+  DATASETS: ('hanzi_train',)
+  NMS: 0.2
   RPN_PRE_NMS_TOP_N: 1000  # Per FPN level
   RPN_POST_NMS_TOP_N: 1000
-  DETECTIONS_PER_IM: 300
+  DETECTIONS_PER_IM: 150
   BBOX_AUG:
     ENABLED: True
     SCORE_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     COORD_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     H_FLIP: True
-    SCALES: (300, 400, 500)
+    SCALES: (100, 200, 300, 400)
     MAX_SIZE: 3000
-    SCALE_H_FLIP: True
-    ASPECT_RATIOS: (0.7, 0.8, 1., 1.2, 1.3, )
-    ASPECT_RATIO_H_FLIP: True
+    # SCALE_H_FLIP: True
+    # ASPECT_RATIOS: (0.7, 0.8, 1., 1.2, 1.3, )
+    # ASPECT_RATIO_H_FLIP: True
   BBOX_VOTE:
     ENABLED: True
     VOTE_TH: 0.7
