--- a/configs/dishwash_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN.yaml
+++ b/configs/dishwash_cfgs/e2e_faster_rcnn_X-101-64x4d-FPN.yaml
@@ -1,7 +1,7 @@
 MODEL:
   TYPE: generalized_rcnn
   CONV_BODY: FPN.add_fpn_ResNet101_conv5_body
-  NUM_CLASSES: 10
+  NUM_CLASSES: 3
   FASTER_RCNN: True
 NUM_GPUS: 2
 SOLVER:
@@ -10,8 +10,8 @@ SOLVER:
   # 1x schedule (note TRAIN.IMS_PER_BATCH: 1)
   BASE_LR: 0.005
   GAMMA: 0.1
-  MAX_ITER: 20000
-  STEPS: [0, 5000, 12000]
+  MAX_ITER: 10000
+  STEPS: [0, 4800, 8400]
 RPN:
   FOCAL_LOSS: False
 FPN:
@@ -32,8 +32,8 @@ FAST_RCNN:
   ROI_XFORM_SAMPLING_RATIO: 2
   MLP_HEAD_DIM: 1024
 TRAIN:
-  WEIGHTS: imagenet_models/X-101-64x4d.pkl
-  # WEIGHTS: trained_models/trafficSign/train/trafficSign_train/generalized_rcnn/model_0523_quater.pkl
+  # WEIGHTS: imagenet_models/X-101-64x4d.pkl
+  WEIGHTS: trained_models/dishwash_aug/train/dishwash_train/generalized_rcnn/model_final.pkl
   DATASETS: ('dishwash_train',)
   # SCALES: (600, 700, 800, 900, 1000)
   SCALES: (600, 800, 1000)
@@ -41,16 +41,16 @@ TRAIN:
   IMS_PER_BATCH: 1
   BATCH_SIZE_PER_IM: 64
   RPN_PRE_NMS_TOP_N: 500  # Per FPN level
-  USE_FLIPPED: False
+  USE_FLIPPED: True
   # RPN_POSITIVE_OVERLAP: 0.9
   # FG_THRESH: 0.9
   DATASET_CACHE_PATH: 'detectron/datasets/data/dishwash/cache/'
 TEST:
-  DATASETS: ('trafficSign_train',)
+  DATASETS: ('dishwash_train',)
   NMS: 0.3
   RPN_PRE_NMS_TOP_N: 500  # Per FPN level
   RPN_POST_NMS_TOP_N: 20
-  DETECTIONS_PER_IM: 5
+  DETECTIONS_PER_IM: 10
   SCORE_THRESH: 0.01
   SCALE: 1200
    # -- Test time augmentation example -- #
@@ -58,10 +58,10 @@ TEST:
     ENABLED: True
     SCORE_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
     COORD_HEUR: UNION  # AVG NOTE: cannot use AVG for e2e model
-    H_FLIP: False
+    H_FLIP: True
     # SCALES: (600, 700, 800, 900, 1000)
-    SCALES: (200, 300, 400, 500, 600, 700, 800)
-    MAX_SIZE: 3000
+    SCALES: (1000,)
+    MAX_SIZE: 3500
     SCALE_H_FLIP: False
     SCALE_SIZE_DEP: False
     AREA_TH_LO: 20   # (14/1800*600)^2
@@ -70,5 +70,5 @@ TEST:
     ASPECT_RATIO_H_FLIP: False
   BBOX_VOTE:
     ENABLED: True
-    VOTE_TH: 0.9
+    VOTE_TH: 0.8
 OUTPUT_DIR: .
